<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Student Overlook</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pergunta1">Type student id:</string>
    <string name="pergunta2">Type exam 1 result:</string>
    <string name="pergunta3">Type exam 2 result:</string>
    <string name="pergunta4">Type exam 3 result:</string>
    <string name="pergunta5">Type essays final result:</string>
    <string name="calcular">Calculate</string>
    <string name="limpar">Clean</string>

</resources>
