<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.aproveitamentoaluno.MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pergunta1"
        android:labelFor="@+id/codaluno" />

    <EditText
        android:id="@+id/codaluno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" >
        
        <requestFocus />
        
    </EditText>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pergunta2"
        android:labelFor="@+id/av1" />

    <EditText
        android:id="@+id/av1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pergunta3"
        android:labelFor="@+id/av2" />

    <EditText
        android:id="@+id/av2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pergunta4"
        android:labelFor="@+id/av3" />

    <EditText
        android:id="@+id/av3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pergunta5"
        android:labelFor="@+id/mediatrab" />

    <EditText
        android:id="@+id/mediatrab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />
    
    
    <Button
	    android:id="@+id/btcalcular"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/calcular" />
    
    <Button
	    android:id="@+id/btlimpar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/limpar" />

</LinearLayout>
